# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: coverage.yml  rust.yml
.sqlx/: query-6bcc794eb579defe3353c394beeb4514c71b66e807d55e7c9cbc35666232c50c.json  query-7fd01c52effb1d23f5e242b9a8d05564de3c7a1178c1c2f5f056490e3d704736.json
configuration/: base.yaml  local.yaml  production.yaml
docs/: chapter5.md  source.md
migrations/: 20230724064702_make_status_not_null_in_subscriptions.sql  20230724065032_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: greet.rs  health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
templates/: index.html
tests/: email_client.rs  health_check.rs
tests/app/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
