[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "zero2prod"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = "0.6.18"
bytes = "1.4.0"
chrono = "0.4.26"
config = "0.13.3"
http = "0.2.9"
hyper = "0.14.27"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
tracing-log = "0.1.3"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
    "tls-rustls",
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11.18"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
once_cell = "1"
