[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "zero2prod"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.6"
bytes = "1.4"
chrono = "0.4"
config = "0.13"
http = "0.2"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tower-http = { version = "0.4", features = ["full"] }
tower = "0.4"
askama = "0.12"
serde-aux = "4.2"
unicode-segmentation = "1.10"
thiserror = "1.0"
static_assertions = "1.1.0"
validator = "0.16.1"



[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
    "tls-rustls",
]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"
uuid = { version = "1.4", features = ["serde", "v4"] }
once_cell = "1"
proptest = "1.0.0"
pretty_assertions = "1.4.0"
fake = "2.6.1"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
